Add parentIds to error DeltaFiles and childIds to DeltaFiles with error children.